prover-ray/zkcdriver/testdata/synced/invalid/static_03.zkc
//error:3:4-9:expected type u8
static mask(address:u16) -> (word:u8) {
   0x100,0xf2,0x22
}

fn main() {
  var r:u8 = mask[0]
  return
}
